fix: corregido errores de sintxis en la levantameinto de severless

--- a/lambda-orchestrator/serverless.yml
+++ b/lambda-orchestrator/serverless.yml
@@ -25,4 +25,5 @@ functions:
 
 custom:
   serverless-offline:
-    httpPort: 3000
+    httpPort: ${env:OFFLINE_HTTP_PORT}
+    lambdaPort: ${env:OFFLINE_LAMBDA_PORT}
