--- a/orders-api/package.json
+++ b/orders-api/package.json
@@ -16,6 +16,8 @@
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0",
     "zod": "^4.1.12"
   }
 }
