feat: agregado jwt para servicio de autenticacion

--- a/customers-api/.env.example
+++ b/customers-api/.env.example
@@ -1,14 +1,9 @@
-# Configuración de Base de Datos
-MYSQL_ROOT_PASSWORD=super_secure_pass_123
-MYSQL_DATABASE=b2b_orders
+# customers API
+PORT=3001
+JWT_SECRET=super_secreto_compartido_123
+
+# Configuración DB
 DB_HOST=mysql_db
 DB_USER=root
-
-# Puertos (útil si en el servidor están ocupados)
-PORT_CUSTOMERS=3001
-PORT_ORDERS=3002
-PORT_DB=3306
-
-# Secretos de Aplicación
-SERVICE_TOKEN=token_seguro_para_backend
-JWT_SECRET=firma_jwt_segura
+DB_PASSWORD=rootpassword
+DB_NAME=b2b_orders
