--- a/lambda-orchestrator/.env.example
+++ b/lambda-orchestrator/.env.example
@@ -1,6 +1,6 @@
 CUSTOMERS_API_URL=http://localhost:3001
 ORDERS_API_URL=http://localhost:3002
-SERVICE_TOKEN=secret123
+JWT_SECRET=super_secreto_compartido_123
 
 OFFLINE_HTTP_PORT=3000
 OFFLINE_LAMBDA_PORT=3004
