--- a/lambda-orchestrator/package.json
+++ b/lambda-orchestrator/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "serverless": "^4.25.0",
