fix: subiendo correcciones adicionales

--- a/orders-api/.env.example
+++ b/orders-api/.env.example
@@ -1,9 +1,11 @@
 PORT=3002
+
 # Configuración DB
 DB_HOST=mysql_db
 DB_USER=root
 DB_PASSWORD=rootpassword
 DB_NAME=b2b_orders
-SERVICE_TOKEN=secret123
+JWT_SECRET=super_secreto_compartido_123
+
 # Comunicación interna (nombre del servicio de docker)
 CUSTOMERS_API_URL=http://customers_api:3001
