--- a/customers-api/package.json
+++ b/customers-api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest",
     "dev": "node --watch index.js"
   },
   "keywords": [],
